--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ layout: default
       {% for cat in post.categories %}
       {% if cat == 'mysql' %}
          <a href="{{site.baseurl}}/categories/#{{ cat }}">MySQL</a>&nbsp;
+      {% elsif cat == 'nosql' %}
+         <a href="{{site.baseurl}}/categories/#{{ cat }}">NoSQL</a>&nbsp;
       {% else %}
          <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat | capitalize}}</a>&nbsp;
       {% endif %}
