--- a/_backup/theme/20151126/sidebar.html
+++ b/_backup/theme/20151126/sidebar.html
@@ -3,6 +3,7 @@
 {% include Copyright_Notice.html %}
 {% include Google_Search.html %}
 {% include WeChat_DBTalk.html %}
+{% include WeChat_Donate.html %}
 {% include Recent_Posts.html %}
 {% include Categories.html %}
 {% include Archives.html %}
