[Donate] Add bitcoin address

--- a/simple/index.html
+++ b/simple/index.html
@@ -23,6 +23,6 @@
 		<div id="MainBox"></div>
 	</div>
 	<!-- Bitcoin 账号 -->
-	<input id="btc-key" type="text" value="" readonly="readonly">
+	<input id="btc-key" type="text" value="3QboL2k5HfKjKDrEYtQAKubWCjx9CX7i8f" readonly="readonly">
 </body>
 </html>
