[Theme] Change donte style

--- a/simple/index.html
+++ b/simple/index.html
@@ -11,11 +11,7 @@
 	<script src="script.js"></script>
 </head>
 <body>
-	本博客开通了闪电网络打赏，读者可以扫描下方的闪电网络二维码（博客右侧导航栏也有）进行打赏。
-
-	<center><img title="Bitcoin Lightning Network Donate" width="180" height="180" src="https://lnd.hoo.com/api/generate?openid=TruSwjrK2q57V484Tf0u&isimg=1" alt="Bitcoin Lightning Network Donate"/></center>
-
-	同时，本博客还支持 PayPal、BTC、支付宝、微信支付打赏。
+	本博客支持 PayPal、BTC、支付宝、微信支付打赏。
 
 	<a id="github" href="https://github.com/dbarobin" target="_blank" class="pos-f tr3" title="Github"></a>
 	<div id="DonateText" class="tr3">Donate</div>
@@ -30,5 +26,9 @@
 	</div>
 	<!-- Bitcoin 账号 -->
 	<input id="btc-key" type="text" value="3QboL2k5HfKjKDrEYtQAKubWCjx9CX7i8f" readonly="readonly">
+
+	同时，本博客开通了闪电网络打赏，读者可以扫描下方的闪电网络二维码（博客右侧导航栏也有）进行打赏。
+
+	<center><img title="Bitcoin Lightning Network Donate" width="180" height="180" src="https://lnd.hoo.com/api/generate?openid=TruSwjrK2q57V484Tf0u&isimg=1" alt="Bitcoin Lightning Network Donate"/></center>
 </body>
 </html>
